Fixed button alignment under small resolutions

--- a/src/main/resources/assets/admin/common/styles/api/form-common.less
+++ b/src/main/resources/assets/admin/common/styles/api/form-common.less
@@ -161,7 +161,8 @@
     }
 
     label + .form-input,
-    label + .input-wrapper {
+    label + .input-wrapper,
+    label + .@{_COMMON_PREFIX}button {
       margin-left: 0;
     }
 
